wk_taa_taaqa/src/objects/TSM_Shared_Product__c.object
<CustomObject>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Opportunity_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Opportunity Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Oppty_Product_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Oppty Product Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>TSM Shared Product</label>
    <nameField>
        <displayFormat>TP-{0000000000}</displayFormat>
        <label>TSM_SharedProducts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TSM Shared Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>